Edited YuccaSoft information

--- a/jbresume.tex
+++ b/jbresume.tex
@@ -10,13 +10,15 @@ johnbrz@gmail.com
 
 650 Edith Way, Long Beach, CA 90807
 
+johnbrz.com
+
 \hypertarget{summary}{%
 \subsubsection{Summary:}\label{summary}}
 
 \begin{itemize}
 \tightlist
 \item
-  Four years professional experience developing LAMP applications,
+  Six years professional experience developing LAMP applications,
   managing Apache servers, and working with and within modern CMS
   frameworks;
 \item
@@ -32,16 +34,15 @@ johnbrz@gmail.com
 \hypertarget{experience}{%
 \subsection{Experience:}\label{experience}}
 
-\hypertarget{ecyberdeck-champions-cup-softball-tournament}{%
-\subsubsection{eCyberDeck / Champions Cup Softball
-Tournament}\label{ecyberdeck-champions-cup-softball-tournament}}
+\hypertarget{yuccasoft}{%
+\subsubsection{YuccaSoft}\label{yuccasoft}}
 
-\hypertarget{contract-web-developer}{%
-\subsubsection{Contract Web Developer}\label{contract-web-developer}}
+\hypertarget{senior-web-developer}{%
+\subsubsection{Senior Web Developer}\label{senior-web-developer}}
 
-\hypertarget{november-2012---june-2013-august-2015---present}{%
-\subsubsection{November 2012 - June 2013 , August 2015 -
-Present}\label{november-2012---june-2013-august-2015---present}}
+\hypertarget{january-2012---june-2013-august-2015---present}{%
+\subsubsection{January 2012 - June 2013 , August 2015 -
+Present}\label{january-2012---june-2013-august-2015---present}}
 
 \begin{itemize}
 \tightlist
